--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   firebase_auth: ^4.15.3
   firebase_storage: ^11.5.6
   flutter_svg: ^2.0.9
+  image_picker: ^1.0.5
 
 dev_dependencies:
   flutter_test:
