--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   firebase_storage: ^11.5.6
   flutter_svg: ^2.0.9
   image_picker: ^1.0.5
+  provider: ^6.1.1
 
 dev_dependencies:
   flutter_test:
