--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
   image_picker: ^1.0.5
   provider: ^6.1.1
   uuid: ^4.2.2
+  font_awesome_flutter: ^10.6.0
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
